# IOT_SGX

./: .gitignore
iot_sgx/: CMakeLists.txt  Makefile  app  execution_time(microseconds).txt  execution_time_unenc(microseconds).txt  readme.txt
iot_sgx/App/: App.cpp  CurlHelper.cpp  CurlHelper.h  EmailManager.cpp  EmailManager.h  Enclave_u.c  Enclave_u.h  ErrorSupport.h  IoTMQTTWrapper.cpp  IoTMQTTWrapper.h  JSONParser.cpp  JSONParser.h  MongoHelper.cpp  MongoHelper.h  MongoManager.cpp  MongoManager.h  Sensor.cpp  Sensor.h  SocketConnection.cpp  SocketConnection.h  SocketManager.h  aes_gcm.h  bridge.cpp  bridge.h  mongodb.py
iot_sgx/Enclave/: Constants.h  Enclave.cpp  Enclave.edl  Enclave.h  EnclaveHelper.cpp  EnclaveHelper.h  Enclave_t.c  Enclave_t.h  LFUCache.h  LRUCache.cpp  LRUCache.h  MessageParser.cpp  MessageParser.h  RuleBase.cpp  RuleBase.h  RuleManager.cpp  RuleManager.h  RuleParser.cpp  RuleParser.h  analytics_utils.cpp  analytics_utils.h
iot_sgx/experiments/: execution_time(microseconds)_june22.txt  execution_time(microseconds)_june25_r1000_c100.txt  execution_time(microseconds)_june25_r100_c25.txt  execution_time(microseconds)_june25_r400_c100.txt  execution_time(microseconds)_june25_r5000_c100.txt  execution_time(microseconds)_june28_r100_c100_d10000.txt  execution_time_unenc(microseconds)_june25_r1000_c100.txt  execution_time_unenc(microseconds)_june25_r100_c25.txt  execution_time_unenc(microseconds)_june25_r400_c100.txt  execution_time_unenc(microseconds)_june25_r5000_c100.txt  execution_time_unenc(microseconds)_june28_r100_c100_d10000.txt
(+98 files in other folders)
